--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "author": "PowerWolf-DEV",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "bcrypt": "^5.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.2",
     "method-override": "^3.0.0",
-    "mongoose": "^5.13.3"
+    "mongoose": "^5.13.3",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
