--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.2",
+    "express-validator": "^6.12.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.3",
     "passport": "^0.4.1",
