--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "PowerWolf-DEV",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
